syntax = "proto3";

message Coordinate {
    int32 x = 1;
    int32 y = 2;
}

message Field {
    repeated Coordinate coordinates = 1;
}

message FieldSequence {
    repeated Field fields = 1;
}

message FitRequest {
    FieldSequence fitData = 1;
}

message FitResponse {
}

message PredictRequest {
    FieldSequence field = 1;
    int32 steps = 2;
}

message PredictionResponse {
    FieldSequence predictedData = 1;
}

service PredictionService {
    rpc fit (FieldSequence) returns (FitResponse);
    rpc predict (PredictRequest) returns (PredictionResponse);
}
